--- a/apps/PoolBasedTripletMDS/widgets/getQuery_widget.html
+++ b/apps/PoolBasedTripletMDS/widgets/getQuery_widget.html
@@ -48,6 +48,8 @@
       <source src={{ query.target_indices[0].primary_description }}>
 	Your browser does not support the video tag.
     </video>
+    {% elif query.target_indices[0].primary_type == "audio" %}
+    <audio controls src={{ query.target_indices[0].primary_description }}></audio>
     {% endif %}
   </div>
 </div>
@@ -67,6 +69,8 @@
       <source src={{ query.target_indices[1].primary_description }}>
 	Your browser does not support the video tag.
     </video>
+    {% elif query.target_indices[0].primary_type == "audio" %}
+    <audio controls src={{ query.target_indices[1].primary_description }}></audio>
     {% endif %}
   </div>
 
@@ -82,6 +86,8 @@
       <source src={{ query.target_indices[2].primary_description }}>
 	Your browser does not support the video tag.
     </video>
+    {% elif query.target_indices[0].primary_type == "audio" %}
+    <audio controls src={{ query.target_indices[2].primary_description }}></audio>
     {% endif %}
   </div>
 </div>
